--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 
 /* Your CSS Code here. */
-p{
-	max-width: 600px;
-margin: 10px;
-padding: 15px;
-border-left: 8px solid green;
-background-color: #f8fffe;
-font-weight: bold;
+
+#capital{
+   max-width: 600px;
+    margin: 10px;
+	padding: 15px;
+    font-weight: bold;
+	border-left: 8px solid green;
+	background-color: #f8fffe;
 }
+/* Your CSS Code here. */
